Import beta build